Fixed TaskService.saveTask() by adding null validation to prevent invalid inputs; updated saveTask_NullTask_ThrowsException test to match behavior, that ensures clear error handling for null tasks.